tests/compError/emptyIfCondition.ucl
// compError
// error: unexpected separator
// tests/compError/emptyIfCondition.ucl:7 -> here

// TODO: error msg

if () {
	
}